crates/rspack_macros/tests/ui/hook/unnamed_struct.stderr
error: expected named struct or unit struct
 --> tests/ui/hook/unnamed_struct.rs:4:14
  |
4 | struct Plugin(String);
  |              ^^^^^^^^
